<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_activity" />

    <LinearLayout
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/phone_n_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginLeft="18dp"
                android:background="@color/white"
                android:drawableLeft="@mipmap/ico_zh"
                android:drawablePadding="18dp"
                android:hint="@string/msg_input_phone"
                android:inputType="phone"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="59dp"
                android:background="@color/webBg" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code_edt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_toLeftOf="@+id/get_code"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:drawableLeft="@mipmap/ico_yzm"
                android:drawablePadding="18dp"
                android:hint="@string/msg_input_code"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/get_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:padding="5dp"
                android:text="获取验证码"
                android:textColor="@color/app_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/code_edt"
                android:layout_marginLeft="59dp"
                android:background="@color/webBg" />

        </RelativeLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="18dp"
            android:background="@color/white"
            android:drawableLeft="@mipmap/ico_mm"
            android:drawablePadding="18dp"
            android:hint="@string/msg_input_pw"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/xy_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="18dp"
        android:gravity="center|left">

        <CheckBox
            android:id="@+id/is_tm"
            style="@style/CustomCheckboxTheme" />

        <TextView
            android:id="@+id/register_xy"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_xy_text"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue_bg"
        android:text="立即注册"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/btn_login_text"
        android:textSize="15dp" />

</LinearLayout>